--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="mui-container">
     <div class="mui-panel">
-      <h1>My Title</h1>
+      <h1>Dorky Markov</h1>
       <div class="mui-textfield">
         <textarea type="text" rows="25" ></textarea>
         <label>Body of Text</label>
