update the form

--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,46 @@
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="//cdn.muicss.com/mui-0.9.10/css/mui.min.css" rel="stylesheet" type="text/css" />
     <script src="//cdn.muicss.com/mui-0.9.10/js/mui.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-      integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
-      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
     <script src="scripts/index.js"></script>
 </head>
 
 <body>
-  <div class="mui-container">
-    <div class="mui-panel">
-      <h1>Dorky Markov</h1>
-      <div class="mui-textfield">
-        <textarea type="text" rows="25" ></textarea>
-        <label>Body of Text</label>
-      </div>
-      <button class="mui-btn mui-btn--primary mui-btn--raised">Do thangz</button>
+    <div class="mui-container">
+        <div class="mui-panel">
+            <h1>Dorky Markov</h1>
+            <div class="mui-row">
+                <div class="mui-col-md-8">
+                    <div class="mui-textfield">
+                        <input type="text" />
+                        <label>Url Source</label>
+                    </div>
+                </div>
+                <div class="mui-col-md-4">
+                    <div class="mui-textfield">
+                        <input type="text" />
+                        <label>Order</label>
+                    </div>
+                </div>
+            </div>
+            <div class="mui-row">
+                <div class="mui-col-md-12">
+                    <div class="mui-textfield">
+                        <textarea type="text" rows="25"></textarea>
+                        <label>Body of Text</label>
+                    </div>
+                </div>
+            </div>
+            <div class="mui-row">
+                <div class="mui-col-md-12">
+                    <button class="mui-btn mui-btn--primary mui-btn--raised"><i class="fa fa-gears"></i> Do thangz</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 </body>
 
