--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
     <script src="lib/jsonviewer.js"></script>
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src="scripts/index.js"></script>
+
 </head>
 
 <body>
     <div class="mui-container">
         <div class="mui-panel">
-            <h1>Dorky Markov</h1>
+            <h1>Drunk Speech Gennerator</h1>
             <div class="mui-row">
                 <div class="mui-col-md-8">
                     <div class="mui-textfield">
@@ -39,12 +41,13 @@
             <div class="mui-row">
                 <div class="mui-col-md-12">
                     <div class="mui-textfield">
-                        <textarea type="text" class="source-material" rows="25"></textarea>
+                        <textarea type="text" class="source-material" rows="15"></textarea>
                         <label>Body of Text</label>
                     </div>
                 </div>
             </div>
             <div class="mui-row">
+                <label>Click Load, then Make the Ngrams then make the speech.</label>
                 <div class="mui-col-md-3">
                     <button class="mui-btn mui-btn--primary mui-btn--raised load-speech"><i class="fa fa-upload"></i> Load Speech</button>
                 </div>
@@ -53,6 +56,9 @@
                 </div>
                 <div class="mui-col-md-3">
                     <button class="mui-btn mui-btn--primary mui-btn--raised make-speech"><i class="fa fa-comments"></i> Make Speech</button>
+                </div>
+                <div class="mui-col-md-3">
+                    <button class="mui-btn mui-btn--primary mui-btn--raised stop-speech"><i class="fa fa-comments"></i> Stop Talking</button>
                 </div>
             </div>
         </div>
