fixedd the ui a little

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="mui-container">
         <div class="mui-panel">
-            <h1>Drunk Speech Gennerator</h1>
+            <h1>Drunk Speech Generator</h1>
             <div class="mui-row">
                 <div class="mui-col-md-8">
                     <div class="mui-textfield">
@@ -47,7 +47,12 @@
                 </div>
             </div>
             <div class="mui-row">
+              <div class="mui-col-md-12">
                 <label>Click Load, then Make the Ngrams then make the speech.</label>
+              </div>
+            </div>
+            <div class="mui-row">
+
                 <div class="mui-col-md-3">
                     <button class="mui-btn mui-btn--primary mui-btn--raised load-speech"><i class="fa fa-upload"></i> Load Speech</button>
                 </div>
