--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="mui-container">
         <div class="mui-panel">
-            <h1>Drunk Speech Generator</h1>
+            <h1>Drunk Presidential Speech Generator</h1>
             <div class="mui-row">
                 <div class="mui-col-md-8">
                     <div class="mui-textfield">
