--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="mui-col-md-4">
                     <div class="mui-textfield">
-                        <input type="text" />
-                        <label>Order</label>
+                        <input class="order" type="text" />
+                        <label >Order</label>
                     </div>
                 </div>
             </div>
