remove url for now

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
         <div class="mui-panel">
             <h1>Drunk Presidential Speech Generator</h1>
             <div class="mui-row">
-                <div class="mui-col-md-8">
+                <!-- <div class="mui-col-md-8">
                     <div class="mui-textfield">
                         <input type="text" />
                         <label>Url Source</label>
                     </div>
-                </div>
+                </div> -->
                 <div class="mui-col-md-4">
                     <div class="mui-textfield">
                         <input class="order" type="text" />
