--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"
+    />
     <link href="//cdn.muicss.com/mui-0.9.10/css/mui.min.css" rel="stylesheet" type="text/css" />
     <link href="/style/jsonviewer.css" rel="stylesheet" type="text/css" />
     <script src="//cdn.muicss.com/mui-0.9.10/js/mui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+        crossorigin="anonymous"></script>
     <script src="lib/jsonviewer.js"></script>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src="scripts/index.js"></script>
@@ -34,7 +36,7 @@
                 <div class="mui-col-md-4">
                     <div class="mui-textfield">
                         <input class="order" type="text" />
-                        <label >Order</label>
+                        <label>Order</label>
                     </div>
                 </div>
             </div>
@@ -47,23 +49,26 @@
                 </div>
             </div>
             <div class="mui-row">
-              <div class="mui-col-md-12">
-                <label>Click Load, then Make the Ngrams then make the speech.</label>
-              </div>
+                <div class="mui-col-md-12">
+                    <label>Click Load, then Make the Ngrams then make the speech.</label>
+                </div>
             </div>
             <div class="mui-row">
 
-                <div class="mui-col-md-3">
+                <!-- <div class="mui-col-md-3">
                     <button class="mui-btn mui-btn--primary mui-btn--raised load-speech"><i class="fa fa-upload"></i> Load Speech</button>
+                </div> -->
+                <div class="mui-col-md-3">
+                    <button class="mui-btn mui-btn--primary mui-btn--raised make-ngrams">
+                        <i class="fa fa-gears"></i> Make nGrams</button>
                 </div>
                 <div class="mui-col-md-3">
-                    <button class="mui-btn mui-btn--primary mui-btn--raised make-ngrams"><i class="fa fa-gears"></i> Make nGrams</button>
+                    <button class="mui-btn mui-btn--primary mui-btn--raised make-speech">
+                        <i class="fa fa-comments"></i> Make Speech</button>
                 </div>
                 <div class="mui-col-md-3">
-                    <button class="mui-btn mui-btn--primary mui-btn--raised make-speech"><i class="fa fa-comments"></i> Make Speech</button>
-                </div>
-                <div class="mui-col-md-3">
-                    <button class="mui-btn mui-btn--primary mui-btn--raised stop-speech"><i class="fa fa-comments"></i> Stop Talking</button>
+                    <button class="mui-btn mui-btn--primary mui-btn--raised stop-speech">
+                        <i class="fa fa-comments"></i> Stop Talking</button>
                 </div>
             </div>
         </div>
